# textual-totp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ttotp.png.license  ttotp.py
.github/workflows/: release.yml  test.yml
src/ttotp/: TinyProgress.py  __main__.py  sixel.py
