# SPDX-FileCopyrightText: 2021 Jeff Epler
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools>=68.2.2",
    "setuptools_scm[toml]>=6.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name="textual-totp"
authors = [{name = "Jeff Epler", email = "jepler@gmail.com"}]
description = "TOTP (authenticator) application using Python & Textual"
dynamic = ["readme","version","dependencies"]
requires-python = ">=3.11"
keywords = ["otp", "totp", "2fa", "authenticator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
[project.urls]
homepage = "https://github.com/jepler/textual-totp"
repository = "https://github.com/jepler/textual-totp"

[project.scripts]
ttotp = "ttotp.__main__:main"

[tool.setuptools_scm]
write_to = "src/ttotp/__version__.py"
[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type="text/markdown"}
dependencies = {file = "requirements.txt"}
[tool.setuptools.package-data]
"pkgname" = ["py.typed"]
[tool.mypy]
mypy_path = ["src"]
warn_unused_ignores = false
warn_redundant_casts = true
strict = true
packages = ["ttotp"]
